@@ -49,7 +49,7 @@
          "prereqs" : {
             "runtime" : {
                "recommends" : {
-                  "PDL::Graphics::Gnuplot" : "0"
+                  "PDL::Graphics::Simple" : "0"
                }
             }
          }
